@@ -1,3 +1,12 @@
+2006-01-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/fact.cpp :
+	* lib/fact.h :
+	* lib/expression.cpp :
+	* lib/expression.h :
+
+	  - Added is_ground() function.
+
 2005-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* Tagged vlad-1_4_1
